# sdlgame

./: Cargo.toml
examples/blank-window/: main.rs
examples/circles/: main.rs
examples/keyboard-events/: main.rs
examples/keyboard-state/: main.rs
examples/lines/: main.rs
examples/mouse-state/: main.rs  shapes.rs
examples/rects/: main.rs
examples/stars/: main.rs
src/: events.rs  keyboard.rs  lib.rs  mouse.rs  shapes.rs  window.rs
