[package]
name = "sdlgame"
version = "0.1.0"
authors = ["Simon Buckner <simonbuckner@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx"]
# features = ["ttf","image","gfx","mixer"]